--- a/src/pages/SignUp/style.css
+++ b/src/pages/SignUp/style.css
@@ -60,7 +60,7 @@
     background-color: white;
 
 }
-
+/* 
 form button {
     width: 250px;
     max-width: 80%;
@@ -78,7 +78,7 @@ form button:hover {
     background-color: #fdfdfd;
     color: #f59a4f;
     font-weight: 600px;
-}
+} */
 
 .formulario-signup a {
     cursor: pointer;
