--- a/src/pages/Profile/style.css
+++ b/src/pages/Profile/style.css
@@ -1,7 +1,8 @@
 .container-profile {
   display: flex;
-  background-color: #d6d4d3;
-  border-radius: 5px;
+  border: 1px solid #f59a4f;
+  background-color: #f5ebdf;
+  border-radius: 10px;
   padding: .8em;
   margin-top: 1em;
   align-items: center
@@ -10,7 +11,7 @@
 /* upload image*/
 .label-avatar {
   width: 200px;
-  height: 200px;
+  height: 250px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -20,6 +21,7 @@
 
 .label-avatar input {
   display: none;
+ 
 }
 
 .label-avatar span {
@@ -35,10 +37,18 @@
   transform: scale(1.4);
 }
 
+.form-profile {
+  display: flex;
+  flex-direction: column;
+}
+
 .form-profile img {
   margin-bottom: 1em;
   border-radius: 50%;
   object-fit: cover;
+  width: 200px;
+  height: 200px;
+  margin-top: .8em;
 }
 
 .form-profile label {
@@ -57,6 +67,8 @@ select {
   border: 0;
   width: 350px;
   max-width: 600px;
+  border: 1px solid #f59a4f;
+ 
 }
 
 .form-profile input:disabled {
