--- a/src/Components/Title/style.css
+++ b/src/Components/Title/style.css
@@ -1,12 +1,15 @@
-.title{
+.title {
     display: flex;
     align-items: center;
     flex-direction: row;
     border-radius: 5px;
-    background-color:  #d6d4d3;
+    border: 1px solid #f59a4f;
+    background-color: #f5ebdf;
     padding: .8em;
 }
-.title span{
-    margin-left: 1em ;
+
+.title span {
+    margin-left: 1em;
     font-size: 1.5em;
+    
 }
