--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -5,13 +5,14 @@
     justify-content: center;
     border: 1px solid #f59a4f;
     background-color: #f5ebdf;
-    border-radius: 10px;
-    padding: .8em;
-    margin-top: 1em;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: .5em;
+    margin-top: .5em;
 }
 
 .dashboard span {
-    padding: .8em;
     margin: .5em 0;
     font-size: 1.2em;
     font-weight: 600px;
@@ -49,16 +50,14 @@
 
 table {
     border: 1px solid #f59a4f;
-    border-radius: 5px;
-    border-spacing: 1em;
-    margin: 0;
-    padding: 0;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-spacing: .8em;
     width: 100%;
     table-layout: fixed;
     margin: 1% auto;
     background-color: #f5ebdf;
-
-
 }
 
 table caption {
@@ -113,7 +112,7 @@ table tbody tr td>button {
 }
 
 table tbody tr td button+button {
-    background-color:  #f59a4f;
+    background-color: #f59a4f;
     border-radius: 5px;
 }
 
@@ -121,7 +120,7 @@ table tbody tr td button+button {
     background-color: #47f180;
     border-radius: 5px;
     color: #f5ebdf;
-    padding: 8%;
+    padding: 2%;
     font-size: 2vh;
 
 }
