--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -117,11 +117,14 @@ table tbody tr td button+button {
 }
 
 .badge {
-    background-color: #47f180;
+    /* background-color: #47f180; */
     border-radius: 5px;
-    color: #f5ebdf;
-    padding: 2%;
-    font-size: 2vh;
+    color: #ffffff;
+    padding: 4%;
+    font-size: 2.0vh;
+    font-weight: bolder;
+    letter-spacing: .1em;
+    text-transform: uppercase;
 
 }
 
@@ -129,4 +132,100 @@ table tbody tr td button:hover {
     background-color: #ffffff;
     border-radius: 5px;
     color: #f59a4f;
+}
+
+.griddashboard {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid #f59a4f;
+    margin-top: 1%;
+}
+
+.fazer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #f59a4f;
+    background-color: #f5ebdf;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding: .5em;
+    margin-top: .5em;
+    width: 27em;
+    min-height: 400px;
+    padding: 4px;
+    margin: 1% auto;
+
+}
+
+.fazer label {
+    margin-bottom: 1%;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    min-width: 95%;
+    border-radius: 5px;
+    background-color: #f59a4f;;
+    margin: 5px auto;
+    display: flex;
+    flex-direction: column;
+    outline: auto;
+    border: none;
+    color: #ffffff;
+}
+
+.cardtitle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0  #f59a4f;
+}
+
+.containercard {
+    color: #222020;
+    padding: 1%;
+    margin: 1%;
+    font-size: 1.2em;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.btncard{
+    display: flex;
+    justify-content: flex-end;
+    padding: 1px;
+    margin: 1px;
+}
+.linha{ 
+    margin-top: 5px;
+    width: 99%;
+    height: 1px;
+    background-color: #f5ebdf;
+    border: 1px solid #f5ebdf;
+}
+.btncard button{
+    display: flex;
+    justify-content: flex-end;
+    min-width: 5%;
+    min-height: 5%;
+    padding: 1px;
+    margin: 4px 3px 0px 1px;
+    background-color: #f59a4f;
+    transition: ease-in-out .5s;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    border: 1px solid #fdfdfd;
+}
+.btncard button:hover{
+   
+    background-color: #ffffff;
+    transition: ease-in-out .5s;
+    color: #f59a4f;
+    border-radius: 5px;
+    border: 1px solid #fdfdfd;
 }
