--- a/src/Components/Title/style.css
+++ b/src/Components/Title/style.css
@@ -13,16 +13,17 @@
     font-size: 1.5em;
 }
 
-.title span+div {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
+.title button {
+    position: relative;
+    margin-left: 80% auto;
+
+    
 }
 
-.title div button {
+/* .title div button {
     border: 0;background-color: #f59a4f;
     border-radius: 5px;
     color: #f5ebdf;
     min-width: 20%;
     min-height: 20%;
-}
+} */
