--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body,
 body {
   font: 14px sans-serif;
   background-color: #EFEFEF;
-  
+
 }
 
 a {
@@ -155,6 +155,7 @@ a:hover {
   height: 100%;
   overflow: none;
   right: 5px;
+  margin-top: 15px;
 
 
 }
@@ -262,8 +263,8 @@ a:hover {
 .content {
   width: calc(100% - 200px);
   padding: 18px 15px;
-
 }
+
 
 /*Responsive*/
 /* @media screen and (max-width: 700px) {
@@ -458,7 +459,7 @@ a:hover {
   .container {
     margin: 50% auto;
     overflow: hidden;
-    
+
   }
 
   .sidebar {
@@ -530,10 +531,16 @@ a:hover {
     padding: 15% 15px;
     width: 100%;
   }
-  table{
-    font-size: clamp(0.5em, 0.5em + 0.5vh, 1.2em);
+
+  /*card dashboard*/
+  .griddashboard{
+    display: block;
   }
-  table tbody tr td button  > svg{
-    width: 20px;
+  .fazer{
+    margin-top: 5%;
+  }
+  /*modal*/
+  .modal{
+    min-width: 25em;
   }
 }
