--- a/src/Components/Modal/style.css
+++ b/src/Components/Modal/style.css
@@ -73,7 +73,7 @@
 }
 
 .row form textarea {
-    min-width: 100%;
+    max-width: 100%;
     height: 70px;
     margin-bottom: 1%;
     font-size: 12px;
