--- a/src/index.css
+++ b/src/index.css
@@ -1,273 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+/* 
 
-*html,
-body,
-#root {
-  height: 100%;
-}
-
-*:focus {
-  outline: 0;
-}
-
-body {
-  font: 14px sans-serif;
-  background-color: #EFEFEF;
-
-}
-
-a {
-  text-decoration: none;
-  color: gray
-}
-
-ul {
-  list-style: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-small {
-  color: #f03d1d;
-  margin-left: 10px;
-}
-
-
-/*SignIn SinguP*/
-.container {
-  margin: 15% auto;
-  background-color: rgb(224, 222, 222);
-  max-width: 500px;
-  height: 300px;
-  max-width: 500px;
-  max-height: 100%;
-  border-top-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-block-end-style: groove;
-  border-block-start-style: ridge;
-  border-block-end-color: #f59a4f;
-  border-block-start-color: #f59a4f;
-  overflow: hidden;
-}
-
-.container div {
-  width: 250px;
-  height: 100%;
-  max-width: 250px;
-  border-top-left-radius: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.container div img {
-  max-width: 100%;
-  height: 100%;
-  border-top-left-radius: 30px;
-  object-fit: contain;
-  background-color: #ffffff;
-  display: flex;
-  margin: -10px auto;
-}
-
-
-.container div form {
-  display: flex;
-  flex-direction: column;
-}
-
-.container div form span {
-  display: flex;
-  justify-content: center;
-  font-size: 1.5em;
-  font-weight: 600px;
-
-
-}
-
-.container div form input {
-  max-width: 90%;
-  border: 1px solid #f59a4f;
-  border-radius: 5px;
-  padding: 10px;
-  background-color: white;
-  margin: 7px;
-  height: 35px;
-
-}
-
-.btn-right {
-  margin: 10px auto;
-  width: 80%;
-  height: 35px;
-  border: 0;
-  border-radius: 5px;
-  background-color: #f59a4f;
-  font-size: 1.2em;
-  padding: 7px;
-  transition: transform 0.8ms step-start;
-  color: #ffffff;
-  margin-top: 10px;
-  margin-bottom: 7px;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  outline: auto;
-
-}
-
-.btn-right:hover {
-  margin: 10px auto;
-  width: 80%;
-  border: 1px solid #f59a4f;
-  border-radius: 5px;
-  background-color: #fdfdfd;
-  font-size: 1.2em;
-  padding: 7px;
-  color: #f59a4f;
-  margin-bottom: 7px;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-}
-
-a:hover {
-  color: #f59a4f;
-}
-
-/*Header*/
-.sidebar {
-  width: 200px;
-  max-width: 200px;
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  height: 100%;
-  overflow: none;
-  right: 5px;
-  margin-top: 15px;
-
-
-}
-
-.sidebar>div {
-  background: url('./assets/logo256x256.png');
-  background-color: #f59a4f;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 150px;
-  width: 200px;
-  max-width: 200px;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  border: 1px solid #f59a4f;
-  display: flex;
-  justify-content: flex-end;
-
-
-}
-
-.sidebar div img {
-  width: 100px;
-  min-width: 90px;
-  height: 100px;
-  min-height: 90px;
-  padding: .8em;
-  max-width: 100px;
-  border-radius: 50%;
-  -webkit-filter: drop-shadow(2px 3px 10px #f59a4f);
-  filter: drop-shadow(2px 3px 10px #f59a4f);
-  object-fit: cover;
-}
-
-.sidebar a {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 4%;
-  background-color: #f59a4f;
-  border: none;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  border: 1px solid #f59a4f;
-  color: #ffffff;
-  margin: 5px;
-  transition: ease-in-out .5s;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-decoration: none;
-  outline: auto;
-}
-
-.sidebar a+button {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 4%;
-  background-color: #f59a4f;
-  border: none;
-  border-top-left-radius: 30px;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-  border: 1px solid #f59a4f;
-  color: #ffffff;
-  margin: 5px;
-  transition: ease-in-out .5s;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: 1px;
-  text-decoration: none;
-  outline: auto;
-  position: relative;
-}
-
-.sidebar a svg {
-  margin-left: 0.2em;
-}
-
-.sidebar button svg {
-  margin-left: 0.2em;
-}
-
-.sidebar a:hover {
-  background-color: #ffffff;
-  color: #f59a4f;
-  font-size: 16px;
-  font-weight: 600px;
-  fill: #f59a4f;
-}
-
-.sidebar a+button:hover {
-  background-color: #ffffff;
-  color: #f59a4f;
-  font-size: 16px;
-  font-weight: 600px;
-  fill: #f59a4f;
-}
-
-/*Title*/
-.content {
-  width: calc(100% - 200px);
-  padding: 18px 15px;
-}
-
-
-/*Responsive*/
-/* @media screen and (max-width: 700px) {
+/*Responsive
+ @media screen and (max-width: 700px) {
   .sidebar {
     min-width: 98%;
     height: 12%;
@@ -328,9 +62,9 @@ a:hover {
     width: 100%;
   }
 }
- */
-@media screen and (max-width: 500px) {
-  /* .sidebar {
+ 
+ @media screen and (max-width: 500px) {
+ .sidebar {
     min-width: 98%;
     height: 12%;
     flex-direction: row-reverse;
@@ -382,19 +116,19 @@ a:hover {
     color: #f59a4f;
     font-size: 16px;
     font-weight: 600px;
-  } */
+  } 
 
-  /*Title*/
-  /* .content {
+Title
+ .content {
     margin-right: 200px;
     padding: 12% 15px;
     width: 100%;
-  } */
+  } 
 
 }
 
 @media screen and (max-width: 400px) {
-  /* .sidebar {
+   .sidebar {
     min-width: 98%;
     height: 12%;
     flex-direction: row-reverse;
@@ -445,102 +179,16 @@ a:hover {
     color: #f59a4f;
     font-size: 16px;
     font-weight: 600px;
-  } */
+  } 
 
-  /*Title*/
-  /*  .content {
+  Title
+    .content {
     margin-right: 200px;
     padding: 16% 15px;
     width: 100%;
-  } */
+  } 
 }
 
-@media only screen and (min-width: 320px) and (max-width:428px) {
-  .container {
-    margin: 50% auto;
-    overflow: hidden;
-
-  }
-
-  .sidebar {
-    min-width: 98%;
-    height: 10%;
-    flex-direction: row-reverse;
-    margin: 1% auto;
-  }
-
-  .sidebar div {
-    width: 17%;
-    height: 50%;
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .sidebar div img {
-    display: none;
-  }
-
-  .sidebar a {
-    font-size: 0px;
-    width: 20%;
-    height: 20%;
-    margin: 0 auto;
-    margin-left: 1px;
-    display: flex;
-    justify-content: center;
-
-  }
-
-  .sidebar a+button {
-    font-size: 0px;
-    width: 20%;
-    height: 20%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-  }
-
-
-  /* 
-  .sidebar button svg {
-
-    margin-left: 0.2em;
-    width: 15px;
-    height: 15px; 
-  }
+ 
+}
 */
-  .sidebar a:hover {
-    background-color: #ffffff;
-    border: 1px solid #f59a4f;
-    color: #f59a4f;
-    font-size: 0px;
-    width: 21%;
-  }
-
-  .sidebar a+button:hover {
-    background-color: #ffffff;
-    border: 1px solid #f59a4f;
-    color: #f59a4f;
-    font-size: 0px;
-    width: 21%;
-  }
-
-  /*Title*/
-  .content {
-    margin-right: 200px;
-    padding: 15% 15px;
-    width: 100%;
-  }
-
-  /*card dashboard*/
-  .griddashboard{
-    display: block;
-  }
-  .fazer{
-    margin-top: 5%;
-  }
-  /*modal*/
-  .modal{
-    min-width: 25em;
-  }
-}
